--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "magelarp",
-  "version": "1.0.0",
-  "description": "CMS for running Mage: The Awakening (MET) LARP",
+  "version": "0.1.0",
+  "description": "CMS for managing a Mage: The Awakening (MET) LARP",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Adam Lydick <lydickaw@gmail.com>",
+  "license": "MIT-0",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
