--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   redis:
     image: redis:7.2-alpine
     restart: always
-    ports:
-      - "127.0.0.1:6379:6379"
+    expose:
+      - 6379
     command: redis-server --save 60 1 --loglevel warning
     volumes:
       - redis-data:/data
