--- a/.devcontainer/docker-compose-dev.yml
+++ b/.devcontainer/docker-compose-dev.yml
@@ -8,3 +8,10 @@ services:
     command: sleep infinity    
     depends_on: 
       - redis
+
+  redis:
+    image: redis:7.2-alpine
+    restart: always
+    command: redis-server --save 60 1 --loglevel warning
+    volumes:
+      - redis-data:/data
